--- a/README.org
+++ b/README.org
@@ -26,6 +26,11 @@ contenido.
 
 ** Noviembre de 2020
 
+*** 06-Nov-20
++ [[https://www.michaelpj.com/blog/2020/10/29/your-orphans-are-fine.html][Your orphan instances are probably fine]]. ~ Michael Peyton Jones. #Haskell #FunctionalProgramming
++ [[https://iokasimov.github.io/posts/2020/10/arrow-and-comma][A story of an arrow and a comma]]. ~  Murat Kasimov. #Haskell #FunctionalProgramming
++ [[http://www.cs.us.es/~fsancho/?e=241][Construir un buscador (en espacios de estados) desde cero]]. ~ Fernando Sancho (@sanchocaparrini). #Algoritmos #IA 
+
 *** 05-Nov-20
 + [[https://htmlpreview.github.io/?https://github.com/effectfully/inference-in-agda/blob/master/InferenceInAgda.html][Inference in Agda (a tutorial on how Agda infers things)]]. ~ Andreas Abel. #ITP #Agda 
 + [[https://mcorbin.fr/pdf/slides/clojure_snowcamp.pdf][Clojure en production]]. ~ Mathieu Corbin. #Clojure
