--- a/README.org
+++ b/README.org
@@ -26,6 +26,14 @@ contenido.
 
 ** Noviembre de 2020
 
+*** 14-Nov-20
++ [[https://www.isa-afp.org/browser_info/current/AFP/AI_Planning_Languages_Semantics/document.pdf][AI planning languages semantics (in Isabelle/HOL)]]. ~ Mohammad Abdulaziz, Peter Lammich. #ITP #IsabelleHOL #AI
++ [[https://www.isa-afp.org/browser_info/current/AFP/Verified_SAT_Based_AI_Planning/document.pdf][Verified SAT-based AI planning]]. ~ Mohammad Abdulaziz, Friedrich Kurz. #ITP #IsabelleHOL #AI
++ [[https://project-archive.inf.ed.ac.uk/ug4/20201778/ug4_proj.pdf][A formalisation of biochemical process languages in Lean]]. ~ Jonathan Coates. #ITP #LeanProver
++ [[https://project-archive.inf.ed.ac.uk/ug4/20201833/ug4_proj.pdf][Mechanizing hyperdual numbers in Isabelle/HOL]]. ~ Filip Smola. #ITP #IsabelleHOL #Math
++ [[https://arxiv.org/abs/2011.03463][Extending equational monadic reasoning with monad transformers]]. ~ Reynald Affeldt, David Nowak. #ITP #Coq
++ [[https://leanprover-community.github.io/contribute/naming.html][Mathlib naming conventions]]. ~ Jeremy Avigad. #ITP #LeanProver
+
 *** 13-Nov-20
 + [[https://github.com/leanprover-community/mathlib/blob/6b3a2d1d07abe083e281b3617f376cabc6043e66/archive/imo/imo1964_q1.lean][IMO 1964 Q1 in Lean]]. ~ Kevin Buzzard. #ITP #LeanProver #Math
 + [[https://bit.ly/3nm70qc][Ranas, pájaros ... y la hipótesis de Riemann]]. ~ Juan Arias de Reyna. #Matemáticas
